# aws-robomaker-mini-pupper-application

./: .gitignore  .gitmodules  Dockerfile-Base  Dockerfile-Robot  Dockerfile-Simulation  README.md  build.sh
robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ws/install/mini_pupper_navigation/lib/pkgconfig/: mini_pupper_navigation.pc
robot_ws/install/mini_pupper_navigation/share/mini_pupper_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
robot_ws/log/: latest_build
robot_ws/src/mini_pupper_navigation/: CMakeLists.txt
robot_ws/src/mini_pupper_navigation/launch/: navigate.launch
scripts/: robot-entrypoint.sh  simulation-entrypoint.sh
simulation_ws/install/: local_setup.sh  setup.sh
simulation_ws/install/champ/share/champ/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/champ_base/lib/champ_base/: message_relay_node  quadruped_controller_node  state_estimation_node
simulation_ws/install/champ_base/share/champ_base/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/champ_bringup/lib/pkgconfig/: champ_bringup.pc
simulation_ws/install/champ_bringup/share/champ_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/champ_config/lib/pkgconfig/: champ_config.pc
simulation_ws/install/champ_config/share/champ_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/champ_description/share/champ_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/champ_gazebo/lib/champ_gazebo/: contact_sensor
simulation_ws/install/champ_gazebo/share/champ_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/champ_msgs/include/champ_msgs/: PointArray.h  Velocities.h
simulation_ws/install/champ_msgs/share/champ_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/champ_navigation/share/champ_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/mini_pupper_description/share/mini_pupper_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
simulation_ws/install/mini_pupper_gazebo/lib/pkgconfig/: mini_pupper_gazebo.pc
simulation_ws/log/: latest_build
simulation_ws/src/minipupper_ros/mini_pupper_gazebo/: CMakeLists.txt
(+54 files in other folders)
